--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>it.ilpirris</groupId>
   <artifactId>jcallback</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <packaging>jar</packaging>
 
   <name>JCallback</name>
